--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6",
     "web-vitals": "^4.2.4"
